--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/leilton/got-houses-challenge#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.1",
-    "git-commit-msg-linter": "^4.1.3"
+    "git-commit-msg-linter": "^4.1.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
