--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "start": "node server.js",
     "prod": "export SET NODE_ENV=production && node server.js",
-    "dev": "cross-env NODE_ENV=development nodemon server.js"
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "test:local":"jest --passWithNoTests --no-cache --runInBand --setupFiles dotenv/config",
+    "test:watch":"npm run test:local -- --watch",
+    "test:watch:windows":"cross-env npm run test:local -- --watch",
+    "test:coverage":"npm run test:local -- --coverage",
+    "test:clear-cache":"jest --clearCache"
   },
   "repository": {
     "type": "git",
@@ -14,19 +19,33 @@
   },
   "author": "Leilton César",
   "license": "ISC",
+  "jest": {
+    "verbose": true,
+    "testEnvironment": "node",
+    "transform": {},
+    "setupFilesAfterEnv": [
+      "./tests/main/config/setup.js"
+    ]
+  },
   "bugs": {
     "url": "https://github.com/leilton/got-houses-challenge/issues"
   },
   "homepage": "https://github.com/leilton/got-houses-challenge#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.2",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "git-commit-msg-linter": "^4.1.3",
+    "mongoose": "^6.6.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.19"
+    "jest": "^27.5.1",
+    "mongodb-memory-server": "^8.9.1",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   }
 }
