--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "express-validator": "^6.14.2",
     "git-commit-msg-linter": "^4.1.3",
     "mongoose": "^6.6.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
